result_k8s/deploy.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: security 
  labels:
    app: result
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: result
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: result
        tier: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: result-cont
          image: abdelrhmanpasha/result:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - name: result-port
              containerPort: 4000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          
          readinessProbe:
            httpGet:
              path: / # مسار خفيف للتأكد إن الـ App قام
              port: result-port
            initialDelaySeconds: 10
            periodSeconds: 5
          
          livenessProbe:
            httpGet:
              path: /
              port: result-port
            initialDelaySeconds: 20
            periodSeconds: 10
