result_k8s/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result-networkpolicy
  namespace: security
spec:
  podSelector:
    matchLabels:
      app: result
      tier: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            # لازم تتأكد إن الـ namespace بتاع الـ ingress controller عليه الليبل ده
            kubernetes.io/metadata.name: ingress-nginx 
    ports:
    - protocol: TCP
      port: result-port # بورت الكونتينر بتاع الـ result
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: postgres # مسموح له يكلم الريديس بس
            tier: backend
    ports:
    - protocol: TCP
      port: c-db-port
  # لازم تسمح بـ DNS عشان الـ Pod يعرف يترجم اسم "redis-svc" لـ IP
  - to:
      - namespaceSelector: {}
    ports:
     - protocol: UDP
       port: 53
     - protocol: TCP
       port: 53
